<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.apps.jmm.ex_crud_retrofit.FormUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/nToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:gravity="top"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:elevation="@dimen/cardview_default_elevation"
            android:stateListAnimator="@drawable/translation_selector"
            android:transitionName="@string/TRANSITION_CARD"
            card_view:cardCornerRadius="@dimen/cardView_radius"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_form">

                <ImageView
                    android:id="@+id/nUserIcon"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/user_icon"
                    android:padding="30dp"
                    android:transitionName="@string/TRANSITION_CIRCLE"
                    android:scaleType="centerCrop"
                    card_view:srcCompat="@drawable/ic_person_black_24dp" />

                <TextView
                    android:id="@+id/nUserActionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/formTitle"
                    android:textSize="@dimen/text_title_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:paddingBottom="@dimen/padding_linear_ic"/>

                <Switch
                    android:id="@+id/nSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_id_name_and_birth_date" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nIdUserHint"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/nIdUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fId"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/nUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userName"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nBirthDateSinceHint"
                    >

                    <EditText
                        android:id="@+id/nBirthDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthDate"
                        android:inputType="datetime"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nBirthDateUntilHint"
                    >

                    <EditText
                        android:id="@+id/nBirthDateUntil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthDate"
                        android:inputType="datetime"
                        android:textColorHint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    tools:ignore="ExtraText,RtlHardcoded,UselessParent">

                    <Button
                        android:id="@+id/nOkButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/okButton"
                        android:textColor="@color/colorAccent"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/nCancelButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelButton"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
